prusti-tests/tests/verify_overflow/ui/core_proof/Counterexamples/account.stderr
error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/account.rs:16:31
   |
16 | fn has_money(acc: Account) -> bool {
   |                               ^^^^
   |
note: the error originates here
  --> $DIR/account.rs:16:1
   |
16 | / fn has_money(acc: Account) -> bool {
17 | |     get_balance(acc) > 0
18 | | }
   | |_^
note: counterexample for "acc"
       value:   Account {
            balance: 0,
        }
  --> $DIR/account.rs:16:14
   |
16 | fn has_money(acc: Account) -> bool {
   |              ^^^
note: counterexample for "result"
       value:   false
  --> $DIR/account.rs:17:5
   |
17 |     get_balance(acc) > 0
   |     ^^^^^^^^^^^^^^^^^^^^
note: counterexample for "get_balance()"
       value:   0
  --> $DIR/account.rs:17:5
   |
17 |     get_balance(acc) > 0
   |     ^^^^^^^^^^^^^^^^

error: aborting due to previous error

